[gd_scene load_steps=7 format=3 uid="uid://botjx0e8asnn4"]

[ext_resource type="Script" uid="uid://d027yxnpaywvs" path="res://Scenes/Natu's Tests/Players/MainPLAYERCode.gd" id="1_rkc1m"]
[ext_resource type="SpriteFrames" uid="uid://l6vax56uwrtk" path="res://Scenes/Natu's Tests/Players/MainPLAYER.tres" id="2_2n14f"]
[ext_resource type="PackedScene" uid="uid://dq20x1kd55xtu" path="res://Assets/Main Character/Hearts/hearts.tscn" id="4_81qc2"]
[ext_resource type="PackedScene" uid="uid://0v47rdwgcw8g" path="res://Scenes/Natu's Tests/inventory/inventory.tscn" id="4_rkc1m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8erm5"]
radius = 26.0
height = 70.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2n14f"]
size = Vector2(48, 42)

[node name="Player1" type="CharacterBody2D"]
scale = Vector2(1.2, 1.2)
script = ExtResource("1_rkc1m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -29)
scale = Vector2(3.0625, 3.4375)
sprite_frames = ExtResource("2_2n14f")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_8erm5")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="deal_attack" type="Timer" parent="."]
wait_time = 0.4

[node name="health_bar" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="health_bar"]
offset_right = 40.0
offset_bottom = 40.0

[node name="heart" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)
animation = &"Beating"

[node name="heart3" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart3" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)
animation = &"Full"

[node name="heart4" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart4" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)
animation = &"Full"

[node name="heart5" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart5" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)
animation = &"Full"

[node name="heart2" type="TextureRect" parent="health_bar/HBoxContainer"]
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart2" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)
animation = &"Full"

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(36, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(6.5, -3)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="attack_range_hori" type="Area2D" parent="."]

[node name="left" type="CollisionShape2D" parent="attack_range_hori"]
shape = SubResource("RectangleShape2D_2n14f")

[node name="Inventory" parent="." instance=ExtResource("4_rkc1m")]

[node name="bullet_cooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="power_cooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack" to="." method="_on_deal_attack_timeout"]
[connection signal="body_entered" from="attack_range_hori" to="." method="_on_attack_range_hori_body_entered"]
[connection signal="body_exited" from="attack_range_hori" to="." method="_on_attack_range_hori_body_exited"]
[connection signal="timeout" from="bullet_cooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="power_cooldown" to="." method="_on_power_cooldown_timeout"]
